--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,6 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.5",
     "parcel": "^2.12.0",
-    "punycode": "^2.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
@@ -24,10 +23,18 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "simplex-noise": "^4.0.1",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "userland": "^0.4.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.25.0",
+    "@testing-library/dom": "^10.3.0",
+    "@testing-library/react": "^16.0.0",
+    "babel-jest": "^29.7.0",
     "cssnano": "^7.0.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.1",
