--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "framer-motion": "^11.2.5",
-    "parcel": "^2.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
@@ -29,12 +29,14 @@
   "devDependencies": {
     "@babel/core": "^7.24.9",
     "@babel/preset-env": "^7.25.0",
+    "@parcel/babel-preset-env": "^2.12.0",
     "@testing-library/dom": "^10.3.0",
     "@testing-library/react": "^16.0.0",
     "babel-jest": "^29.7.0",
     "cssnano": "^7.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "parcel": "^2.12.0",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.1",
